<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.a912b.ui.ubicacion.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.a912b.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a912b.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recordaudio"
        android:name="com.example.a912b.ui.recordaudio.RecordAudio"
        android:label="@string/title_audio"
        tools:layout="@layout/fragment_record_audio" />

    <fragment
        android:id="@+id/navigation_recordvideo"
        android:name="com.example.a912b.ui.recordvideo.RecordVideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_record_video" />
</navigation>